--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "autoprefixer": "^10.4.14",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-tailwindcss": "^3.10.1",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
     "tailwind-merge": "^1.10.0",
     "tailwindcss": "^3.2.7",
     "typescript": "5.0.2"
