--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^13.2.4",
     "clsx": "^1.2.1",
+    "lucide-react": "^0.129.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
